# prato-do-dia-api

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
src/prato_do_dia_api/: __init__.py  main.py
src/prato_do_dia_api/api/routes/: health.py  meals.py
src/prato_do_dia_api/core/: config.py
src/prato_do_dia_api/db/: models.py  session.py
src/prato_do_dia_api/schemas/: meal.py
src/prato_do_dia_api/services/: ml_service.py  nutrition_mapper.py
tests/: test_health.py  test_meals.py
