[project]
name = "prato-do-dia-api"
version = "0.1.0"
description = "Backend API for the Prato do Dia university research prototype."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "orjson",
    "pillow",
    "pydantic-settings",
    "python-multipart",
    "sqlalchemy",
    "uvicorn",
    "prato-do-dia-yolo-sam @ file://localhost/home/gabe/projects/prato-do-dia/prato-do-dia-ml",
]

[dependency-groups]
dev = [
    "basedpyright",
    "httpx",
    "pre-commit",
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prato_do_dia_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ARG", "PTH", "TRY", "RUF"]
ignore = [
    # TRY003 pushes trivial exception messages into custom classes too early for this prototype.
    "TRY003",
]

[tool.basedpyright]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
exclude = [
    ".venv",
    "**/__pycache__",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
]

[tool.hatch.metadata]
allow-direct-references = true
